// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social Media Follow Align right renders correctly 1`] = `
<jest>
  <div
    class="ecl-social-media-follow ecl-social-media-follow--right"
  >
    <p
      class="ecl-social-media-follow__description"
    >
      Follow us
    </p>
    <ul
      class="ecl-social-media-follow__list"
    >
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--facebook ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--facebook"
          />
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--instagram ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--instagram"
          />
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--mastodon ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--mastodon"
          />
          <span
            class="ecl-link__label"
          >
            Mastodon
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--linkedin ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--linkedin"
          />
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--telegram ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram"
          />
          <span
            class="ecl-link__label"
          >
            Telegram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--chain ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
          />
          <span
            class="ecl-link__label"
          >
            Other
          </span>
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`Social Media Follow Colored renders correctly 1`] = `
<jest>
  <div
    class="ecl-social-media-follow ecl-social-media-follow--left"
  >
    <p
      class="ecl-social-media-follow__description"
    >
      Follow us
    </p>
    <ul
      class="ecl-social-media-follow__list"
    >
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--facebook-color ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--facebook-color"
          />
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--instagram-color ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--instagram-color"
          />
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--mastodon-color ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--mastodon-color"
          />
          <span
            class="ecl-link__label"
          >
            Mastodon
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--linkedin-color ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--linkedin-color"
          />
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--telegram-color ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram-color"
          />
          <span
            class="ecl-link__label"
          >
            Telegram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--chain ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
          />
          <span
            class="ecl-link__label"
          >
            Other
          </span>
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`Social Media Follow Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-social-media-follow ecl-social-media-follow--left"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <p
      class="ecl-social-media-follow__description"
    >
      Follow us
    </p>
    <ul
      class="ecl-social-media-follow__list"
    >
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--facebook ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--facebook"
          />
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--instagram ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--instagram"
          />
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--mastodon ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--mastodon"
          />
          <span
            class="ecl-link__label"
          >
            Mastodon
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--linkedin ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--linkedin"
          />
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--telegram ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram"
          />
          <span
            class="ecl-link__label"
          >
            Telegram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--chain ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
          />
          <span
            class="ecl-link__label"
          >
            Other
          </span>
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`Social Media Follow Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-social-media-follow ecl-social-media-follow--left custom-class custom-class--test"
  >
    <p
      class="ecl-social-media-follow__description"
    >
      Follow us
    </p>
    <ul
      class="ecl-social-media-follow__list"
    >
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--facebook ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--facebook"
          />
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--instagram ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--instagram"
          />
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--mastodon ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--mastodon"
          />
          <span
            class="ecl-link__label"
          >
            Mastodon
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--linkedin ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--linkedin"
          />
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--telegram ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram"
          />
          <span
            class="ecl-link__label"
          >
            Telegram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--chain ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
          />
          <span
            class="ecl-link__label"
          >
            Other
          </span>
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`Social Media Follow Horizontal renders correctly 1`] = `
<jest>
  <div
    class="ecl-social-media-follow ecl-social-media-follow--left"
  >
    <p
      class="ecl-social-media-follow__description"
    >
      Follow us
    </p>
    <ul
      class="ecl-social-media-follow__list"
    >
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--facebook ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--facebook"
          />
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--instagram ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--instagram"
          />
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--mastodon ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--mastodon"
          />
          <span
            class="ecl-link__label"
          >
            Mastodon
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--linkedin ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--linkedin"
          />
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--telegram ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram"
          />
          <span
            class="ecl-link__label"
          >
            Telegram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--chain ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
          />
          <span
            class="ecl-link__label"
          >
            Other
          </span>
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`Social Media Follow Vertical renders correctly 1`] = `
<jest>
  <div
    class="ecl-social-media-follow ecl-social-media-follow--vertical ecl-social-media-follow--left"
  >
    <p
      class="ecl-social-media-follow__description"
    >
      Follow us
    </p>
    <ul
      class="ecl-social-media-follow__list"
    >
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--facebook ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--facebook"
          />
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--instagram ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--instagram"
          />
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--mastodon ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--mastodon"
          />
          <span
            class="ecl-link__label"
          >
            Mastodon
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--linkedin ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--linkedin"
          />
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--telegram ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--telegram"
          />
          <span
            class="ecl-link__label"
          >
            Telegram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--no-visited ecl-link--icon ecl-social-media-follow__link"
          href="/example"
        >
          <span
            class="wt-icon-networks--chain ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon ecl-icon-networks--chain"
          />
          <span
            class="ecl-link__label"
          >
            Other
          </span>
        </a>
      </li>
    </ul>
  </div>
</jest>
`;
